crates/canvas-cli/tests/snapshots/review_m1c__assignment_human.snap
---
source: crates/canvas-cli/tests/review_m1c.rs
expression: "f.human(&[\"assignment\", \"1\", \"2\", \"--offline\"]).await"
---
  ID    Course    Name          Due                             Status   
  2               Homework 2    Wed Sep 9, 11:59 PM (in 10h)    unknown  

Explain **chemistry**.
Submission types: online_upload
Allowed extensions: pdf
Attempts: 3, extra: unknown
can_submit: false
Unlock: unknown
Lock: unknown
Rubric: Reasoning (10.0)
https://canvas.test/courses/1/assignments/2
