crates/canvas-cli/tests/snapshots/review_m1c__todo_human.snap
---
source: crates/canvas-cli/tests/review_m1c.rs
expression: "f.human(&[\"todo\", \"--offline\"]).await"
---
missing=0 due_today=1 due_week=1 hidden=0
2026-09-09
  ID    Course    Name          Due                             Status   
  2     CHEM      Homework 2    Wed Sep 9, 11:59 PM (in 10h)    unknown
